minor changes done

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -74,10 +74,6 @@
         <div class="mx-1 mx-md-4">
           <div class="flex justify-content-center align-items-center">
             <i class="fa-solid fa-check fs-4 me-2"></i>
-            <span class="mb-1">Cutting-edge AI and machine learning expertise</span>
-          </div>
-          <div class="flex justify-content-center align-items-center">
-            <i class="fa-solid fa-check fs-4 me-2"></i>
             <span class="mb-1">Full-stack development capabilities</span>
           </div>
           <div class="flex justify-content-center align-items-center">
@@ -92,6 +88,10 @@
             <i class="fa-solid fa-check fs-4 me-2"></i>
             <span class="mb-1">Scalable, future-proof solutions</span>
           </div>
+          <div class="flex justify-content-center align-items-center">
+            <i class="fa-solid fa-check fs-4 me-2"></i>
+            <span class="mb-1">Cutting-edge AI and machine learning expertise</span>
+          </div>
         </div>
       </div>
       <div class="col-md-6 col-12 p-2 mt-3 mt-md-0 text-center position-relative fade-in-right">
@@ -104,7 +104,7 @@
 
   <!-- SECTION 4: Stats -->
   <div class="container-fluid section-4 mx-auto py-5 px-4 stats-section">
-    <div class="row text-center">
+    <div class="row text-center mt-5 mb-4">
       <div class="col-md-3 col-6 zoom-in">
         <h2 class="fw-bold counter" data-value="100">0</h2>
         <p>Projects Delivered</p>
