--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -38,12 +38,11 @@
             <form (ngSubmit)="onSubmit()" #iform="ngForm">
                 <div class="mb-3">
                     <label for="name" class="form-label required">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="form.name" required />
+                    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="form.name" />
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label required">Email address</label>
-                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="form.email"
-                        required />
+                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="form.email" />
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
@@ -52,10 +51,10 @@
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label required">Message</label>
-                    <textarea class="form-control" id="message" name="message" [(ngModel)]="form.message" rows="5"
-                        required></textarea>
+                    <textarea class="form-control" id="message" name="message" [(ngModel)]="form.message" rows="5">
+                    </textarea>
                 </div>
-                <div class="d-flex justify-content-center align-items-center my-4" >
+                <div class="d-flex justify-content-center align-items-center my-4">
                     <button type="submit" class="btn btn-primary py-2 px-5" [disabled]="iform.invalid">
                         Submit
                     </button>
