--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -11,24 +11,44 @@
                 Let’s talk and innovate.
             </p>
 
-            <ul class="list-unstyled mt-4 contact-info px-md-0 px-3">
+            <ul class="list-unstyled mt-4 contact-info px-3 text-start">
                 <li class="mb-2">
-                    <i class="fas fa-envelope text-primary me-2"></i>
-                    <strong>Sales:</strong>
-                    <a href="mailto:sales@codemobix.in">sales&#64;codemobix.in</a>
+                    <div class="d-flex">
+                        <i class="fas fa-envelope text-primary mt-1"></i>
+                        <strong class="text-nowrap">Sales: </strong>
+                        <div class="d-flex flex-wrap ms-2">
+                            <a href="mailto:sales@codemobix.in">sales&#64;codemobix.in</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="mb-2">
-                    <i class="fas fa-globe text-primary me-2"></i>
-                    <strong>Website:</strong>
-                    <a href="https://www.codemobix.in" target="_blank">www.codemobix.in</a>
+                    <div class="d-flex">
+                        <i class="fas fa-globe text-primary mt-1"></i>
+                        <strong class="text-nowrap">Website: </strong>
+                        <div class="d-flex flex-wrap ms-2">
+                            <a href="https://www.codemobix.in" target="_blank">www.codemobix.in</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="mb-2">
+                    <div class="d-flex">
+                        <i class="fas fa-phone text-primary me-1 mt-1"></i>
+                        <strong class="text-nowrap">Call & Whatsapp: </strong>
+                        <div class="d-flex flex-wrap ms-2">
+                            <span class="me-1"> +91-9339906263, </span>
+                            <span> +91-8222022289</span>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <i class="fas fa-map-marker-alt text-primary me-2"></i>
-                    <strong>Location:</strong> Sohana Road, Gurgaon, Haryana, India
-                </li>
-                <li>
-                    <i class="fas fa-phone text-primary me-2"></i>
-                    <strong>Call & Whatsapp:</strong> +91-0000000000
+                    <div class="d-flex">
+                        <i class="fas fa-map-marker-alt text-primary me-2 mt-1"></i>
+                        <strong class="text-nowrap">Location: </strong>
+                        <div class="d-flex flex-wrap ms-2">
+                            213,214, 2nd Floor, Welldone Tech Park, Sohana Road, Sector-48, Gurgaon (122018), Haryana,
+                            India
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
