minor changes for prod

--- a/src/app/pages/components/footer/footer.html
+++ b/src/app/pages/components/footer/footer.html
@@ -5,6 +5,6 @@
             <i class="fa-brands fa-x-twitter mx-5"></i>
             <i class="fa-brands fa-google"></i>
         </div>
-        <p class="mb-0 copyright"><a class="text-decoration-none" href="#" routerLink="/">©CodeMobix Technologies</a> 2025 All right reserved.</p>
+        <p class="mb-0 copyright"><a class="text-decoration-none" routerLink="https://codemobix.in/home">©CodeMobix Technologies</a> 2025 All right reserved.</p>
     </div>
 </div>
