--- a/src/app/pages/components/header/header.html
+++ b/src/app/pages/components/header/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar" [class.header-scrolled]="isScrolled">
-  <a class="navbar-brand d-flex align-items-center" href="#">
+  <a class="navbar-brand d-flex align-items-center" href="https://codemobix.in/home">
     <img src="https://github.com/surindersaini2050/codemobix/blob/main/public/images/codemobix_logo.png?raw=true" alt="Logo" width="200" height="60" class="d-inline-block align-text-top">
   </a>
 
