seo and address changes

--- a/src/app/pages/components/header/header.html
+++ b/src/app/pages/components/header/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar" [class.header-scrolled]="isScrolled">
   <a class="navbar-brand d-flex align-items-center" href="https://codemobix.in/home">
-    <img src="https://github.com/surindersaini2050/codemobix/blob/main/public/images/codemobix_logo.png?raw=true" alt="Logo" width="200" height="60" class="d-inline-block align-text-top">
+    <img src="https://github.com/surindersaini2050/codemobix/blob/main/public/images/codemobix_logo.png?raw=true" titile="Codemobix Technologies" alt="Logo" width="200" height="60" class="d-inline-block align-text-top">
   </a>
 
   @if(!isMobileView) {
