--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -45,7 +45,7 @@
                         <i class="fas fa-map-marker-alt text-primary me-2 mt-1"></i>
                         <strong class="text-nowrap">Location: </strong>
                         <div class="d-flex flex-wrap ms-2">
-                            213,214, 2nd Floor, Welldone Tech Park, Sohana Road, Sector-48, Gurgaon (122018), Haryana,
+                            213,214, 2nd Floor, Welldone Tech Park, Sohna Road, Sector-48, Gurgaon (122018), Haryana,
                             India
                         </div>
                     </div>
