--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -104,7 +104,7 @@
 
   <!-- SECTION 4: Stats -->
   <div class="container-fluid section-4 mx-auto py-5 px-4 stats-section">
-    <div class="row text-center mt-5 mb-4">
+    <div class="container row text-center mt-5 mb-4 mx-auto">
       <div class="col-md-3 col-6 zoom-in">
         <h2 class="fw-bold counter" data-value="100">0</h2>
         <p>Projects Delivered</p>
