--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -48,7 +48,8 @@
       </div>
 
       <div class="row mt-3 mt-md-5">
-        <div class="col-12 col-md-4 p-2" *ngFor="let card of expertiseCards; let i = index">
+        @for (card of expertiseCards; track card.title; let i = $index;) {
+        <div class="col-12 col-md-4 p-2">
           <div class="card p-4 mb-0 expertiseCard h-100 fade-in-up" [ngStyle]="{animationDelay: (i * 0.2) + 's'}">
             <div class="expertise-icon" [style.backgroundColor]="card.iconColor">
               <i class="fas {{card.icon}} fs-3 m-auto"></i>
@@ -57,6 +58,7 @@
             <div class="card-description">{{card.description}}</div>
           </div>
         </div>
+        }
       </div>
     </div>
   </div>
